# nomo

./: CHANGELOG.md  README.md  nomo.cabal
src/: Nomo.hs
src/Nomo/: Acc.hs  Class.hs  Examples.hs  Type.hs
src/Nomo/Acc/: App.hs  Bind.hs  Compose.hs  Foldl.hs  Foldr.hs  Foldr1.hs  List.hs  Map.hs  NP.hs  NPr.hs  Post.hs  Pre.hs  PrePoly.hs  RApp.hs  RSplat.hs  RSplatr.hs  Splat.hs  Tuple.hs  Vec.hs
src/Nomo/Control/: Apply.hs
src/Nomo/Data/: Vec.hs
